# feup-da-projects

./: .gitignore  Courier.cpp  Courier.h  ExpressOrder.cpp  Order.cpp  Order.h  README.md  main.cpp
DeliveryManager/: DeliveryManager.cpp  DeliveryManager.h  ExpressOrder.h  Order.cpp  Order.h  Van.cpp  Van.h
Menu/: Menu.cpp  Menu.h
Project1/: CMakeLists.txt  main.cpp
Project1/Menu/: Menu.cpp
Project1/datasets/: encomendas_small.txt
Project2/: .gitignore  CMakeLists.txt  main.cpp
Project2/Menu/: Menu.cpp  Menu.h
Project2/Tests_B/: in01_b.txt  in11.txt  in12.txt
Project2/TravelAgency/: Graph.cpp  Graph.h  Local.cpp  Local.h  TravelAgency.cpp  TravelAgency.h  Vehicle.cpp  Vehicle.h  helper  maxHeap.h  minHeap.h
